--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,58 @@
-.button-class {
+
+  html, 
+  body {
+    font-family: Arial, sans-serif;
+  }
+  
+  #modal-container {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    
+    /* to show it above other content */
+    z-index: 999; 
+    
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto; 
+    
+    /* this is used to center the modal */
+    display: grid;
+    text-align: center;
+  }
+  
+  .modal {
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    background: #fff;
+    padding: 15px;
+    width: 100%;
+    max-width: 700px;
+    text-align: left;
+  }
+  
+  .modal-close {
+    float: right;
+    border: 0;
+    background: none;
+    color: #777;
+    text-decoration: underline;
+  }
+  
+  .modal h1 {
+    margin-top: 0;
+  }
+  
+  .modal p {
+    margin-bottom: 0;
+  }
+
+  .button-class {
     background-color: #4caf50; /* Green */
     border: none;
     color: white;
@@ -14,4 +68,31 @@
     background-color: white;
     color: black;
     border: 2px solid #4caf50;
-  }
+  };
+
+  css
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  /* to show it above other content */
+  z-index: 999; 
+
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+  
