--- a/css/styles.css
+++ b/css/styles.css
@@ -1,81 +1,12 @@
 
-  html, 
-  body {
-    font-family: Arial, sans-serif;
-  }
-  
-  #modal-container {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    
-    /* to show it above other content */
-    z-index: 999; 
-    
-    /* to allow scrolling if the screen is not high enough*/
-    overflow: auto; 
-    
-    /* this is used to center the modal */
-    display: grid;
-    text-align: center;
-  }
-  
-  .modal {
-    margin: auto;
-    display: inline-block;
-    box-sizing: border-box;
-    background: #fff;
-    padding: 15px;
-    width: 100%;
-    max-width: 700px;
-    text-align: left;
-  }
-  
-  .modal-close {
-    float: right;
-    border: 0;
-    background: none;
-    color: #777;
-    text-decoration: underline;
-  }
-  
-  .modal h1 {
-    margin-top: 0;
-  }
-  
-  .modal p {
-    margin-bottom: 0;
-  }
 
-  .button-class {
-    background-color: #4caf50; /* Green */
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    border: 2px solid #4caf50;
-  };
 
-  css
 #modal-container {
   display: none;
 }
 
 #modal-container.is-visible {
+  /* puts a layer on top of everything else that covers the whole page */
   position: fixed;
   padding: 20px;
   box-sizing: border-box;
@@ -83,16 +14,65 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
 
   /* to show it above other content */
-  z-index: 999; 
+  z-index: 999;
 
   /* to allow scrolling if the screen is not high enough*/
-  overflow: auto; 
+  overflow: auto;
 
   /* this is used to center the modal */
   display: grid;
   text-align: center;
 }
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  text-align: center;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+}
+
+.modal.close {
+  float: right;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+body {
+  background-color: red;
+  font-family:  sans-serif;
+  font-weight:bold;
+  font-size: var(--font-size-regular);
+  color: var(--text-color);
+  padding: 0 50px;
+  line-height: 1.4;
   
+}
+
+.listItemButton {
+  border-style: solid;
+  width: 80%;
+  font-size: 20pt;
+  padding: 14px 20px;
+  border-radius: 40px; 
+  text-transform: uppercase;
+}
+
+.listItemButton:hover {
+  cursor: pointer;
+  background-color: blue;
+}
+
+h3{
+  text-transform: uppercase;
+}
+ul {
+  list-style: none;
+}
